patchati alcuni bug tra server e mongodb
